force-app/main/default/objects/Sync_Master__c/fields/Can_ReSync__c.field-meta.xml
<CustomField>
    <fullName>Can_ReSync__c</fullName>
    <formula>IF(AND(Track_Members_When_Sync_Started__c, Total_Memerbs_Count_RollUp__c &gt; Processed_Members__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can ReSync</label>
    <type>Checkbox</type>
</CustomField>