force-app/main/default/objects/Sync_Master__c/fields/Processed_Members__c.field-meta.xml
<CustomField>
    <fullName>Processed_Members__c</fullName>
    <label>Processed Members (Roll-Up)</label>
    <summaryFilterItems>
        <field>Sync_Members__c.Is_Processed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Sync_Members__c.Sync_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>