force-app/main/default/objects/Sync_Master__c/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>inwise Sync</label>
    <referenceTo>Sync__c</referenceTo>
    <relationshipLabel>inwise Sync Processes</relationshipLabel>
    <relationshipName>inwise_Sync_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>