force-app/main/default/objects/Sync_Master__c/fields/Total_Memerbs_Count_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Total_Memerbs_Count_RollUp__c</fullName>
    <label>Total Memerbs Count (Roll-Up)</label>
    <summaryForeignKey>Sync_Members__c.Sync_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>